@@ -31,7 +31,8 @@ SELECT '#5299b' AS ticket, jsonb_array_length(d->'rules') AS num_rules, jsonb_ar
 (1 row)
 
 SELECT '#5299bt' AS ticket, it->>'pos' AS pos, it->>'word' AS word,  it->>'token' AS token, it->>'stdword' AS stdword FROM jsonb(debug_standardize_address('us_lex',  'us_gaz', 'us_rules','50 Gold Piece Drive, Boston, MA, 02020')) AS d, jsonb_array_elements(d->'input_tokens') AS it
-WHERE it @> '{"pos": 2}'::jsonb;
+WHERE it @> '{"pos": 2}'::jsonb
+ORDER BY pos, stdword, word, token;
  ticket  | pos | word  | token | stdword 
 ---------+-----+-------+-------+---------
  #5299bt | 2   | PIECE | UNITH | PIECE
